# Garmin-Push

./: .gitignore  README.md  index.html  manifest.webmanifest  pyproject.toml  sw.js
garmin_push/: auth.py  cli.py  client.py  config.py  models.py
tests/: test_models.py
workouts/: examples.yaml
