[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-push"
version = "0.1.0"
description = "CLI tool to push running workouts to Garmin Connect"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.2.38",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["garmin_push*"]

[project.scripts]
garmin-push = "garmin_push.cli:main"
